--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -69,8 +69,8 @@ $max-message-width: 85%;
 $message-width: 85%;
 $message-border-radius: 30px;
 
-$chat-bottom-spacing: $chat-footer-height + $chat-message-height + 90px;
-$chat-bottom-spacing-lg: $chat-footer-height-lg + $chat-message-height-lg + 40px;
+$chat-bottom-spacing: $chat-footer-height + $chat-message-height + 80px;
+$chat-bottom-spacing-lg: $chat-footer-height-lg + $chat-message-height-lg + 70px;
 
 /*special message types*/
 $icon-width: 76px;
